--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ nav{
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.04);
     background-color: white;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 100;
 }
 .logo img{
     height: 35px;
@@ -64,4 +68,77 @@ nav .menu li a:hover{
     color: white;
     box-shadow: 5px 10px 30px rgba(53, 53, 53, 0.1);
     transition: all ease 0.2s;
+}
+#main{
+    padding-top: 80px;
+    background-color: white;
+}
+.showcase-box{
+    width: 430px;
+    height: 250px;
+    box-shadow: 5px 15px 30px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    margin: 0px 20px 10px 20px;
+    overflow: hidden;
+}
+.showcase-box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+.showcase-heading{
+    padding-left: 30px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    color: #1a1a1a;
+}
+.cs-hiddem{
+    overflow: visible !important;
+}
+#latest{
+    border-top: 1px solid rgba(53, 53, 53, 0.1);
+}
+.latest-heading{
+    margin: 30px 30px 0px 30px;
+    font-weight: 500;
+    font-size: 1.3rem;
+}
+.latest-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+    margin: 20px 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 200px;
+    background-color: white;
+}
+.latest-b-img{
+    width: 100%;
+    height: 270px;
+}
+.latest-b-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.latest-b-text strong{
+    color: #3a3a3a;
+    margin: 0px;
+}
+.latest-b-text{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px;
+}
+.latest-b-text p{
+    color: #979797;
+    margin: 0px;
 }
